--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,10 @@
 = SunCalc
 :source-highlighter: coderay
 
-SunCalc is a tiny BSD-licensed JavaScript library for calculating sun position,
+SunCalc is a tiny BSD-licensed Golang library for calculating sun position,
 sunlight phases (times for sunrise, sunset, dusk, etc.),
 moon position and lunar phase for the given location and time,
-created by [Vladimir Agafonkin](http://agafonkin.com/en) ([@mourner](https://github.com/mourner))
+created originaly in Javascript by [Vladimir Agafonkin](http://agafonkin.com/en) ([@mourner](https://github.com/mourner))
 as a part of the [SunCalc.net project](http://suncalc.net).
 Translated in GOLANG by Douglas Six
 
@@ -15,7 +15,7 @@ You can read about different twilight phases calculated by SunCalc
 in the [Twilight article on Wikipedia](http://en.wikipedia.org/wiki/Twilight).
 
 
-== Usage example
+== Usage example - WIP
 
 [source, javascript]
 ----
@@ -156,3 +156,4 @@ If `inUTC` is set to true, it will instead search the specified date from 0 to 2
 
 ==== 1.0.0 - April 28, 2019
 - First commit.
+
