:bug: Ensure all struct fields are visible from outside

--- a/README.adoc
+++ b/README.adoc
@@ -154,16 +154,36 @@ Returns an object with the following properties:
 
 Moon phase value should be interpreted like this:
 
-| Phase | Name            |
-| -----:| --------------- |
-| 0     | New Moon        |
-|       | Waxing Crescent |
-| 0.25  | First Quarter   |
-|       | Waxing Gibbous  |
-| 0.5   | Full Moon       |
-|       | Waning Gibbous  |
-| 0.75  | Last Quarter    |
-|       | Waning Crescent |
+[cols="20h,80d"]
+|===
+| Phase
+| Name
+
+| 0
+| New Moon
+
+|
+| Waxing Crescent
+
+| 0.25
+| First Quarter
+
+|
+| Waxing Gibbous
+
+| 0.5
+| Full Moon
+
+|
+| Waning Gibbous
+
+| 0.75
+| Last Quarter
+
+|
+| Waning Crescent
+|===
+
 
 By subtracting the `parallacticAngle` from the `angle` one can get the zenith angle of the moons bright limb (anticlockwise).
 The zenith angle can be used do draw the moon shape from the observers perspective (e.g. moon lying on its back).
