--- a/README.adoc
+++ b/README.adoc
@@ -21,24 +21,39 @@ in the [Twilight article on Wikipedia](http://en.wikipedia.org/wiki/Twilight).
 [source, go]
 ----
 // get today's sunlight times for London
-now := time.Now()
-times := suncalc.GetTimes(now, 51.5, -0.1)
+package mypackage
 
-for _, oneTime := range times {
+import (
+	"database/sql"
+	"reflect"
+	"testing"
+	"time"
+	"fmt"
+	"math"
+	"github.com/sixdouglas/suncalc"
+)
 
-    fmt.Printf("%-13s %d-%02d-%02d %02d:%02d:%02d\n", string(oneTime.MorningName),
-        oneTime.Time.Year(), oneTime.Time.Month(), oneTime.Time.Day(),
-        oneTime.Time.Hour(), oneTime.Time.Minute(), oneTime.Time.Second())
+func main() {
+    var now = time.Now()
+    var times = suncalc.GetTimes(now, 51.5, -0.1, 0, nil)
+
+    for _, oneTime := range times {
+
+        fmt.Printf("%-13s %d-%02d-%02d %02d:%02d:%02d\n", string(oneTime.Name),
+            oneTime.Value.Time.Year(), oneTime.Value.Time.Month(), oneTime.Value.Time.Day(),
+            oneTime.Value.Time.Hour(), oneTime.Value.Time.Minute(), oneTime.Value.Time.Second())
+    }
+
+    // format sunrise time from the Date object
+    fmt.Printf("%d:%d", times[suncalc.Sunrise].Value.Time.Hour(), times[suncalc.Sunrise].Value.Time.Minute())
+
+    // get position of the sun (azimuth and altitude) at today's sunrise
+    var sunrisePos = suncalc.GetPosition(times[suncalc.Sunrise].Value.Time, 51.5, -0.1)
+
+    // get sunrise azimuth in degrees
+    var sunriseAzimuth = sunrisePos.Azimuth * 180 / math.Pi
+    fmt.Printf("%f", sunriseAzimuth)
 }
-
-// format sunrise time from the Date object
-var sunriseStr = times[suncalc.Sunrise].Time.getHours() + ':' + times[suncalc.Sunrise].Time.getMinutes();
-
-// get position of the sun (azimuth and altitude) at today's sunrise
-var sunrisePos = suncalc.GetPosition(times[suncalc.Sunrise].Time, 51.5, -0.1);
-
-// get sunrise azimuth in degrees
-var sunriseAzimuth = sunrisePos.Azimuth * 180 / Math.PI;
 ----
 
 SunCalc is also available as an `dep` package:
@@ -54,7 +69,7 @@ $ dep ensure --add github.com/sixdouglas/suncalc
 
 [source, go]
 ----
-suncalc.GetTimes(date time.Time, latitude float64, longitude float64)
+suncalc.GetTimes(date time.Time, latitude float64, longitude float64, height float64, location *time.Location)
 ----
 
 Returns an object with the following properties (each is a `Date` object):
@@ -207,14 +222,24 @@ If `inUTC` is set to true, it will instead search the specified date from 0 to 2
 
 == Changelog
 
-==== 1.0.2 - Mai 21, 2019
-- Finish documentation.
-- Make sure all struct fields are visible from outside.
+=== 1.1.0 - Mai 23, 2020
+* `suncalc.GetTimes()` now takes two additional parameters:
+** `height`: positive elevation position. Can be set to 0, if not known.
+** `location`: time.Location for the result Time. It can be `nil`
+* `DayTime` structure members changed. `MorningName` becomes `Name` and `Time` becomes `Value` of type `sql.NullTime`
+to have the valuable information about the validity of the date. In fact, in some places and time some values are
+not possible: close to the polars the sun does not set in summer and does not rise in winter.
+* Add some unit tests
+* Update Documentation
 
-==== 1.0.1 - Mai 18, 2019
-- Place SunCalc in his own package.
-- Make some struct variables visible from outside.
+=== 1.0.2 - Mai 21, 2019
+* Finish documentation.
+* Make sure all struct fields are visible from outside.
 
-==== 1.0.0 - Mai 18, 2019
-- First commit.
+=== 1.0.1 - Mai 18, 2019
+* Place SunCalc in his own package.
+* Make some struct variables visible from outside.
+
+=== 1.0.0 - Mai 18, 2019
+* First commit.
 
